2006-10-16  Mikael Hallendal  <micke@imendio.com>

	* loudmouth/lm-connection.c: (_lm_connection_succeeded),
	(_lm_connection_failed_with_error), (connection_do_open),
	(connection_do_close), (lm_connection_new):
	- Keep a reference to LmConnectData and remove the source if connect
	  is cancelled before the connection is open.
	- Fixes LM-59.
	* loudmouth/lm-message-node.c: (lm_message_node_to_string):
	- Use GString to build message node XML.
	- Escape the attribute values unless raw-mode is specified.
	- Fixes LM-48.
	- Patch from Dafydd Harries.

2006-09-21  Mikael Hallendal  <micke@imendio.com>

	* NEWS:
	* configure.ac:
	- Updated for 1.1.4

2006-09-21  Mikael Hallendal  <micke@imendio.com>

	* loudmouth/lm-connection.c: (_lm_connection_succeeded),
	(_lm_connection_failed_with_error), (connection_buffered_write_cb),
	(connection_do_close):
	- Check that we find a resource before trying to destroy it.
	- Fixes warning described in LM-50.


2006-09-21  Richard Hult  <richard@imendio.com>

	* loudmouth/lm-connection.c (connection_connect_cb): 
	* loudmouth/lm-proxy.c (_lm_proxy_connect_cb): 
	- Initialize len, fixes some random bugs on connection errors, where 
	  the error code returned is random numbers.
	- Fixes LM-58.

2006-09-13  Mikael Hallendal  <micke@imendio.com>

	* loudmouth/lm-connection.c: (connection_free):
	- Unref the proxy if set, plugs a leak.
	- Fixes LM-51.

2006-09-11  Mikael Hallendal  <micke@imendio.com>

	* loudmouth/lm-utils.c: (_lm_utils_generate_id):
	- Generate more unique IDs, fixes LM-56.

2006-09-11  Mikael Hallendal  <micke@imendio.com>

	* Release 1.1.3

2006-09-11  Mikael Hallendal  <micke@imendio.com>

	* configure.ac:
	* NEWS:
	- Updated for 1.1.3

2006-09-10  Mikael Hallendal  <micke@imendio.com>

	* configure.ac:
	* loudmouth/Makefile.am:
	* tests/Makefile.am:
	* tests/parser-tests/*:
	* tests/test-parser.c: 
	- Some more work on unit tests for the parser.

2006-09-08  Mikael Hallendal  <micke@imendio.com>
